--- a/cdap-ui/app/directives/widget-container/widget-keyvalue/widget-keyvalue.less
+++ b/cdap-ui/app/directives/widget-container/widget-keyvalue/widget-keyvalue.less
@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 Cask Data, Inc.
+ * Copyright © 2015-2017 Cask Data, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -25,6 +25,24 @@ my-key-value {
     padding: 20px 10px;
     .empty-container {
       padding-left: 15px;
+    }
+
+    .show-delimiter-container {
+      .delimiter-container {
+        margin-bottom: 5px;
+        margin-left: 0;
+        margin-right: 0;
+        display: inline-block;
+
+        &.delimiter {
+          width: 30%;
+        }
+
+        &.keyvalue-delimiter {
+          width: 68%;
+        }
+      }
+
     }
   }
   .row {
